tests/ui/parser/misspelled-keywords/struct.stderr
error: expected one of `!` or `::`, found `Foor`
  --> $DIR/struct.rs:1:8
   |
LL | Struct Foor {
   |        ^^^^ expected one of `!` or `::`
   |
help: write keyword `struct` in lowercase (notice the capitalization)
   |
LL - Struct Foor {
LL + struct Foor {
   |

error: aborting due to 1 previous error

