tests/ui/parser/misspelled-keywords/struct.rs
Struct Foor {
//~^ ERROR expected one of
    hello: String,
}
